fixing visibility issues with mobile navigation menu

--- a/src/components/NavBar/MobileMenu/mobile-menu.scss
+++ b/src/components/NavBar/MobileMenu/mobile-menu.scss
@@ -4,12 +4,17 @@
   height: 40px;
   width: auto;
   display: none;
+  opacity: 1;
 
   &.open {
     transform: rotate(360deg) scaleY(-1);
   }
 
-  transition: transform 0.4s ease-out;
+  &.hidden {
+    opacity: 0;
+  }
+
+  transition: all 0.4s ease-out;
 
   @include tablet-portrait {
     display: block;
